@@ -10,6 +10,7 @@
     <component>gstreamer+%28core%29</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.10.8</milestone>
       <milestone>0.10.7</milestone>
       <milestone>0.10.6</milestone>
       <milestone>0.10.5</milestone>
@@ -56,6 +57,7 @@
     <component>gst-plugins-base</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.10.9</milestone>
       <milestone>0.10.8</milestone>
       <milestone>0.10.7</milestone>
       <milestone>0.10.6</milestone>
