@@ -2526,4 +2526,24 @@ or download tarballs for
     </content>
   </item>
 
+  <item>
+    <date>2006-06-09 20:49</date>
+    <title>GStreamer 0.10.7 and Base Plugins 0.10.8 stable release</title>
+    <content>
+<p>
+The GStreamer team is proud to announce a new Core and Base Plugins 
+release in the new GStreamer stable release series.
+</p>
+<p>
+Check out release notes for
+<a href="&site;/releases/gstreamer/0.10.7.html">gstreamer</a>,
+<a href="&site;/releases/gst-plugins-base/0.10.8.html">gst-plugins-base</a>,
+or download tarballs for
+<a href="&site;/src/gstreamer/gstreamer-0.10.7.tar.bz2">gstreamer</a> or
+<a href="&site;/src/gst-plugins-base/gst-plugins-base-0.10.8.tar.bz2">gst-plugins-base</a>.
+</p>
+    </content>
+  </item>
+
+
 </news>
