@@ -1,0 +1,185 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gst-plugins-base</module>
+  <module-fancy>GStreamer Base Plug-ins</module-fancy>
+  <name>Moar gij ziet mij nie</name>
+  <version>0.10.8</version>
+
+  <intro>
+
+<p>
+The GStreamer team is proud to announce a new release
+in the 0.10.x stable series of the
+GStreamer Base Plug-ins.
+</p>
+<p>
+The 0.10.x series is a stable series targeted at end users.
+It is not API or ABI compatible with the stable 0.8.x series.
+It is, however, parallel installable with the 0.8.x series.
+</p>
+
+<p>
+This module contains a set of reference plugins, base classes for other
+plugins, and helper libraries.
+
+This module is kept up-to-date together with the core developments.  Element
+writers should look at the elements in this module as a reference for
+their development.
+
+This module contains elements for, among others:
+<ul>
+  <li>device plugins: x(v)imagesink, alsa, v4lsrc, cdparanoia</li>
+  <li>containers: ogg</li>
+  <li>codecs: vorbis, theora</li>
+  <li>text: textoverlay, subparse</li>
+  <li>sources: audiotestsrc, videotestsrc, gnomevfssrc</li>
+  <li>network: tcp</li>
+  <li>typefind</li>
+  <li>audio processing: audioconvert, adder, audiorate, audioscale, volume</li>
+  <li>visualisation: libvisual</li>
+  <li>video processing: ffmpegcolorspace</li>
+  <li>aggregate elements: decodebin, playbin</li>
+</ul>
+
+Other modules containing plug-ins are:
+
+<dl>
+<dt>gst-plugins-good</dt>
+<dd>contains a set of well-supported plug-ins under our preferred license</dd>
+<dt>gst-plugins-ugly</dt>
+<dd>contains a set of well-supported plug-ins, but might pose problems for
+    distributors</dd>
+<dt>gst-plugins-bad</dt>
+<dd>contains a set of less supported plug-ins that haven't passed the
+    rigorous quality testing we expect</dd>
+</dl>
+
+</p>
+  </intro>
+  <features>
+    <feature>Parallel installability with 0.8.x series</feature>
+    <feature>Threadsafe design and API</feature>
+
+    <feature>alsasink probing fixes</feature>
+    <feature>xvimagesink error reporting fixes</feature>
+    <feature>subtitle fixes</feature>
+    <feature>adder fixes</feature>
+    <feature>vorbis multichannel fixes</feature>
+    <feature>multifdsink streamheader fixes</feature>
+  </features>
+
+  <applications>
+  </applications>
+    <contributors>
+	<person>Edward Hervey</person>
+	<person>Jan Schmidt</person>
+	<person>Julien Moutte</person>
+	<person>Martin Szulecki</person>
+	<person>Michael Smith</person>
+	<person>Peter Kjellerstedt</person>
+	<person>Sebastien Moutte</person>
+	<person>Stefan Kost</person>
+	<person>Thomas Vander Stichele</person>
+	<person>Tim-Philipp Müller</person>
+	<person>Wim Taymans</person>
+	<person>Young-Ho Cha</person>
+	<person>Zaheer Abbas Merali</person>
+  </contributors>
+
+
+<!--
+  <api>
+    <additions>
+    </additions>
+    <depreciations>
+    </depreciations>
+  </api>
+-->
+
+  
+
+  <bugs>
+    <bug>
+      <id>169936</id>
+      <summary>[subparse] support for SAMI subtitles</summary>
+    </bug>
+    <bug>
+      <id>315312</id>
+      <summary>Gstreamer Xv uses RGB instead of YUV.</summary>
+    </bug>
+    <bug>
+      <id>334002</id>
+      <summary>video4linux shouldn't depend on X in configure script</summary>
+    </bug>
+    <bug>
+      <id>336881</id>
+      <summary>[libvisual] additional support for libvisual-0.4</summary>
+    </bug>
+    <bug>
+      <id>337544</id>
+      <summary>[xvimagesink] Internal Error when image is too large</summary>
+    </bug>
+    <bug>
+      <id>339520</id>
+      <summary>[subparse] add &quot; encoding &quot; property</summary>
+    </bug>
+    <bug>
+      <id>340909</id>
+      <summary>[alsasink] can't enable spdif output</summary>
+    </bug>
+    <bug>
+      <id>341542</id>
+      <summary>some users have an assertion failed: (GST_VIDEO_SINK_WIDT...</summary>
+    </bug>
+    <bug>
+      <id>341562</id>
+      <summary>audioconvert doesn't list formats in order of preference</summary>
+    </bug>
+    <bug>
+      <id>341696</id>
+      <summary>audioconvert crashes if converting from a format with no ...</summary>
+    </bug>
+    <bug>
+      <id>341719</id>
+      <summary>bisection algorithm in ogg doesn't bisect in some cases</summary>
+    </bug>
+    <bug>
+      <id>341732</id>
+      <summary>[alsasink] doesn't query supported sample rates</summary>
+    </bug>
+    <bug>
+      <id>341873</id>
+      <summary>[alsasink] minor memory leak, uses unprotected static var...</summary>
+    </bug>
+    <bug>
+      <id>342143</id>
+      <summary>[subparse] sami parser needs to escape characters</summary>
+    </bug>
+    <bug>
+      <id>342181</id>
+      <summary>[alsa] add property probe interface to alsasink and alsasrc</summary>
+    </bug>
+    <bug>
+      <id>342268</id>
+      <summary>[playbin] add 'subtitle-encoding' property</summary>
+    </bug>
+    <bug>
+      <id>342345</id>
+      <summary>[riff] Elephant's Dream AVI does not play, JUNK chunk bef...</summary>
+    </bug>
+    <bug>
+      <id>342566</id>
+      <summary>Building without GTK+ fails</summary>
+    </bug>
+    <bug>
+      <id>343397</id>
+      <summary>H.264/AAC movie deadlocks with totem in gstreamer code, p...</summary>
+    </bug>
+    <bug>
+      <id>339935</id>
+      <summary>[adder] dead-locks when adding sink pads in PAUSED state</summary>
+    </bug>
+  </bugs>
+
+</release>
