@@ -1,0 +1,184 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gstreamer</module>
+  <module-fancy>GStreamer</module-fancy>
+  <name>Soepeke, ik zie ou</name>
+  <version>0.10.7</version>
+
+  <intro>
+
+<p>
+The GStreamer team is proud to announce a new release
+in the 0.10.x stable series of the
+core of the GStreamer streaming media framework.
+</p>
+<p>
+The 0.10.x series is a stable series targeted at end users.
+It is not API or ABI compatible with the stable 0.8.x series.
+It is, however, parallel installable with the 0.8.x series.
+</p>
+<p>
+The 0.10.x series has been reworked for threadsafety.  It also features
+various feature additions and enchancements.
+</p>
+<p>
+This module, gstreamer, only contains core functionality.
+For actual media playback, you will need other modules.
+<dl>
+<dt>gst-plugins-base</dt>
+<dd>contains a basic set of well-supported plug-ins</dd>
+<dt>gst-plugins-good</dt>
+<dd>contains a set of well-supported plug-ins under our preferred license</dd>
+<dt>gst-plugins-ugly</dt>
+<dd>contains a set of well-supported plug-ins, but might pose problems for
+    distributors</dd>
+<dt>gst-plugins-bad</dt>
+<dd>contains a set of less supported plug-ins that haven't passed the
+    rigorous quality testing we expect</dd>
+</dl>
+
+</p>
+  </intro>
+  <features>
+    <feature>Parallel installability with 0.8.x series</feature>
+    <feature>Threadsafe design and API</feature>
+
+    <feature>Registry cache updating is now done in a fork, so no plugins are left opened</feature>
+    <feature>New version of data protocol now serializes events</feature>
+    <feature>queue fixes</feature>
+    <feature>win32 fixes</feature>
+  </features>
+
+  <applications>
+<p>
+Applications ported to GStreamer 0.10 include Totem, RhythmBox, Sound-Juicer,
+Gnome Media, Flumotion, Amarok, Jamboree, Pitivi, Istanbul, AnnoAmp, Elisa, and others.
+Let us know if you want to be added to this list.
+</p>
+  </applications>
+
+        <contributors>
+	<person>Alessandro Decina</person>
+	<person>Edward Hervey</person>
+	<person>Jan Schmidt</person>
+	<person>Julien Moutte</person>
+	<person>Lutz Mueller</person>
+	<person>Mark Nauwelaerts</person>
+	<person>Michael Smith</person>
+	<person>Sebastien Moutte</person>
+	<person>Stefan Kost</person>
+	<person>Thomas Vander Stichele</person>
+	<person>Tim-Philipp Müller</person>
+	<person>Wim Taymans</person>
+	<person>Zaheer Abbas Merali</person>
+  </contributors>
+
+
+
+
+  <api>
+    <additions>
+      <item>gst_element_seek_simple()</item>
+      <item>GST_FLOW_CUSTOM_SUCCESS</item>
+      <item>GST_FLOW_CUSTOM_ERROR</item>
+      <item>GST_FLOW_IS_SUCCESS</item>
+      <item>gst_collect_pads_set_flushing()</item>
+      <item>GST_TAG_PREVIEW_IMAGE</item>
+      <item>gst_dp_crc()</item>
+      <item>GstDPPacketizer</item>
+      <item>GstDPVersion</item>
+      <item>GstFakeSink::preroll-handoff</item>
+      <item>GstFakeSink::use-mmap</item>
+    </additions>
+<!--
+    <depreciations>
+    </depreciations>
+-->
+  </api>
+
+  
+
+  
+
+  
+
+  <bugs>
+    <bug>
+      <id>338335</id>
+      <summary>[patch] memleak in gst-utils.c (leak pads from iterator)</summary>
+    </bug>
+    <bug>
+      <id>343598</id>
+      <summary>undefined symbol in coreindexers when using --disable-loa...</summary>
+    </bug>
+    <bug>
+      <id>336929</id>
+      <summary>GstCollectPads does not clear/reset segment info after fl...</summary>
+    </bug>
+    <bug>
+      <id>337100</id>
+      <summary>[fakesink] add &quot; preroll-handoff &quot; signal</summary>
+    </bug>
+    <bug>
+      <id>339918</id>
+      <summary>GstTagSetter merge-mode description unclear, and implemen...</summary>
+    </bug>
+    <bug>
+      <id>340501</id>
+      <summary>[filesrc] give primary rank</summary>
+    </bug>
+    <bug>
+      <id>341662</id>
+      <summary>gst-launch print_tags() fix</summary>
+    </bug>
+    <bug>
+      <id>342238</id>
+      <summary>API: gst_element_seek_simple</summary>
+    </bug>
+    <bug>
+      <id>342321</id>
+      <summary>GST_QUERY_POSITION fails if GstBaseSrc in get_range mode</summary>
+    </bug>
+    <bug>
+      <id>342777</id>
+      <summary>rebuilding the registry leaves all plugins in memory</summary>
+    </bug>
+    <bug>
+      <id>342820</id>
+      <summary>gstnetclientclock.c(453): servaddr used before set</summary>
+    </bug>
+    <bug>
+      <id>343057</id>
+      <summary>gst-launch-0.10 segfaults when passed gst-plugin-path and...</summary>
+    </bug>
+    <bug>
+      <id>343341</id>
+      <summary>[API] add GST_TAG_PREVIEW_IMAGE</summary>
+    </bug>
+    <bug>
+      <id>343827</id>
+      <summary>leak in gst_index_gtype_resolver</summary>
+    </bug>
+    <bug>
+      <id>343929</id>
+      <summary>Use of // in public header</summary>
+    </bug>
+    <bug>
+      <id>343988</id>
+      <summary>data protocol needs extending to handle events better</summary>
+    </bug>
+    <bug>
+      <id>341479</id>
+      <summary>Too many plugins loaded even for up-to-date registry</summary>
+    </bug>
+    <bug>
+      <id>343334</id>
+      <summary>GstCollectPads testsuite and fixes</summary>
+    </bug>
+    <bug>
+      <id>343538</id>
+      <summary>GstCollectPads doesn't reset EOS fields when stopped</summary>
+    </bug>
+  </bugs>
+</release>
